优化统计等